[ADD] A connection string was added.

--- a/CoursesSaleAPI/appsettings.json
+++ b/CoursesSaleAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "connectionStrings": {
+    "OnlineCoursesDB": "Server=localhost\\SQLEXPRESS;Database=OnlineCourses;Trusted_Connection=True;Connection Timeout=30;"
+  },
   "AllowedHosts": "*"
 }
